--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap');
+@import url('https://db.onlinewebfonts.com/c/5d73db06d760d7ebb4b1057e1a444a40?family=Againts');
 
 * {
     padding: 0;
@@ -22,7 +23,6 @@ body {
     --hello-color: #242424;
     --follow-color: #575050;
     --box-shadow: rgba(0, 0, 0, 0.753);
-    --project-background: rgba(255, 237, 79, 0.822);
     --contact-background: #289df7;
     --input-background: #ecf0f3;
     --contact-box-shadow:#cbced1c9;
@@ -38,7 +38,6 @@ body.dark {
     --hello-color: #8b8484;
     --follow-color: #b3b3b3;
     --box-shadow: rgba(255, 255, 255, 0.137);
-    --project-background: rgba(18, 139, 35, 0.89);
     --contact-background: #0a0d0f;
     --input-background: white;
     --contact-box-shadow: rgba(206, 206, 206, 0.356);
@@ -73,6 +72,11 @@ nav h3{
     border:  3px solid var(--font-color);
     background-color: var(--bg-color);
     color: var(--font-color);
+    transition: transform .5s ease;
+}
+
+nav h3:hover {
+    transform: scale(1.1);
 }
 
 nav ul{
@@ -116,7 +120,7 @@ nav li:last-child:hover {
 
 /* Name Card  */
 .section1 {
-    min-height: 95vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -175,9 +179,27 @@ nav li:last-child:hover {
 }
 
 .info h3{
-text-align: center;
-font: lighter 1.3rem;
-color: var(--hello-color);
+    text-align: center;
+    font: lighter 1.3rem;
+    color: var(--hello-color);
+}
+
+.typing::after {
+    content: "";
+    right: -5px;
+    width: 1px;
+    height: 5%;
+    border-right: 3px solid var(--hello-color);
+    animation: blink 0.5s infinite ease;
+}
+
+@keyframes blink {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 .info h4{
@@ -200,9 +222,20 @@ color: var(--hello-color);
     cursor: pointer;
 }
 
+/* Heading */
+.heading {
+    font-family: "Againts";
+    margin: 1rem;
+    padding: 1rem;
+    text-align: center;
+    color: white;
+    font-size: 4rem;
+    letter-spacing: .5rem;
+}
+
 /* Glassmorphism */
 .containerglass {
-    min-height: 100vh;
+    min-height: 80vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -213,7 +246,7 @@ color: var(--hello-color);
     align-items: center;
     justify-content: center;
     background: rgba(255, 255, 255, 0.288);
-    min-height: 80vh;
+    min-height: 75vh;
     width: 60%;
     background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.438), rgba(255, 255, 255, 0.226));
     border-radius: 1rem;
@@ -253,19 +286,20 @@ color: var(--hello-color);
 
 .projects a{
     text-decoration: none;
-    color: var(--font-color);
+    color: black;
     margin: 2rem;
 }
 
 .project {
     width: 45vw;
-    height: 50vh;
-    background: var(--project-background);
+    min-height: 21vh;
+    background: var(--circle-color);
     border-radius: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    border: 3px solid black;
     box-shadow: 6px 5px 7px black, -2px -2px 10px black;
     transition: box-shadow .5s ease;
 }
@@ -274,19 +308,25 @@ color: var(--hello-color);
     box-shadow: none;
 }
 .project h3 {
-    border-top: 3px solid black;
     padding: 3px;
 }
 .project img{
-    border: 1px solid black;
-    border-radius: .7rem;
-    width: 90%;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    width: 100%;
 }
 
 
 /*Neumorphic Contact Form */
+.containerform {
+    min-height: 75vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .neumorphiccontainer {
-    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -315,7 +355,6 @@ label, input, button, textarea {
 }
 
 input {
-    
     text-transform: none;
     background: var(--input-background);
     padding: 10px;
@@ -447,8 +486,14 @@ footer {
         font-size: .8rem;
     }
 
+    .section1 {
+        min-height: 80vh;
+    }
     .container3d {
         width: 81%;
+    }
+    .card {
+        min-height: 60vh;
     }
     .darshan img {
         margin-left: -.5rem;
@@ -476,6 +521,13 @@ footer {
         font-size: 1rem;
     }
     
+    .containerglass {
+        min-height: 60vh;
+    }
+    .glass {
+        min-height: 55vh;
+    }
+
     .skills i{
         font-size: 2.2rem;
     }
@@ -485,6 +537,5 @@ footer {
 
     .project {
         width: 75vw;
-        height: 30vh;
     }
 }
